--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ jmespath==1.0.1
 Mako==1.3.5
 MarkupSafe==2.1.5
 marshmallow==3.20.1
+mccabe==0.7.0
 msgpack==1.1.0
 numpy==2.3.4
 packaging==24.1
@@ -46,8 +47,10 @@ proto-plus==1.25.0
 protobuf==5.29.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycodestyle==2.14.0
 pycparser==2.22
 pycryptodome==3.23.0
+pyflakes==3.4.0
 PyJWT==2.9.0
 PyMySQL==1.1.1
 pyparsing==3.2.0
